# bluerov2_exp

./: CMakeLists.txt  README.md
launch/: cam.launch  odom.launch  odom_mocap.launch  rviz.launch
launch/config/: cam_info.yaml  odom.yaml  uuv.rviz
log/2025_May/: README.md
misc/: README.md  cam.sh  firmware.md  kill.sh  odom.sh  ping.sh  set_stream_rate.sh
misc/on_pi/: attach_cont.sh  start_cont.sh
misc/on_pi_docker/: bundle_launch.sh  bundle_xue_pi.sh  dummy_pose_pub.sh  dvl.sh  kill.sh  set_stream_rate.sh  transmit.sh
misc/on_yang/: point_pub.sh  pose_pub.sh  rviz.sh  ssh.sh  test_connection.sh  vel_pub.sh
rosbags/: april_6x6.yaml  calib-camchain.yaml  calib-results-cam.txt
scripts/: apriltag.py  cam.py
src/: cam.cpp  odom.cpp  odom_mocap.cpp  offb.cpp  offb_a.cpp  offb_b.cpp  offb_c.cpp
